# controller/categoriacontroller.go
@@ -19,15 +19,15 @@ func NewCategoriaController(categoriaService *service.CategoriaService) *Categor
 	return &CategoriaController{categoriaService: categoriaService}
 }
 
-// @Summary		Listar Categorias
-// @Description	Lista todas as Categorias
-// @Tags		categorias
-// @Accept		json
-// @Produce		json
-// @Success		200				{array}		model.Categoria
-// @Failure		401				{object}	config.HTTPError
-// @Router		/categorias 	[get]
-// @Security	Bearer
+//	@Summary		Listar Categorias
+//	@Description	Lista todas as Categorias
+//	@Tags			categorias
+//	@Accept			json
+//	@Produce		json
+//	@Success		200				{array}		model.Categoria
+//	@Failure		401				{object}	config.HTTPError
+//	@Router			/categorias 	[get]
+//	@Security		Bearer
 func (categoriaController *CategoriaController) FindAll(c *fiber.Ctx) error {
 
 	categorias, _ := categoriaController.categoriaService.FindAll()
@@ -36,18 +36,18 @@ func (categoriaController *CategoriaController) FindAll(c *fiber.Ctx) error {
 
 }
 
-// @Summary		Listar Categoria por id
-// @Description	Lista uma Categoria por id
-// @Tags			categorias
-// @Accept			json
-// @Produce		json
-// @Param			id					path		string	true	"Id da Categoria"
-// @Success		200					{array}		model.Categoria
-// @Failure		400					{object}	config.HTTPError
-// @Failure		401					{object}	config.HTTPError
-// @Failure		404					{object}	config.HTTPError
-// @Router			/categorias/{id} 	[get]
-// @Security		Bearer
+//	@Summary		Listar Categoria por id
+//	@Description	Lista uma Categoria por id
+//	@Tags			categorias
+//	@Accept			json
+//	@Produce		json
+//	@Param			id					path		string	true	"Id da Categoria"
+//	@Success		200					{array}		model.Categoria
+//	@Failure		400					{object}	config.HTTPError
+//	@Failure		401					{object}	config.HTTPError
+//	@Failure		404					{object}	config.HTTPError
+//	@Router			/categorias/{id} 	[get]
+//	@Security		Bearer
 func (categoriaController *CategoriaController) FindById(context *fiber.Ctx) error {
 
 	id := context.Params("id")
@@ -64,17 +64,17 @@ func (categoriaController *CategoriaController) FindById(context *fiber.Ctx) err
 	return context.Status(fiber.StatusOK).JSON(categoria)
 }
 
-// @Summary		Listar Categorias por grupo
-// @Description	Lista todas as Categorias por grupo
-// @Tags			categorias
-// @Accept			json
-// @Produce		json
-// @Param			grupo						path		string	true	"Grupo do Medicamento (Antibiótico, Antihistamínico, entre outros)"
-// @Success		200							{array}		model.Categoria
-// @Failure		400							{object}	config.HTTPError
-// @Failure		401							{object}	config.HTTPError
-// @Router			/categorias/grupo/{grupo} 	[get]
-// @Security		Bearer
+//	@Summary		Listar Categorias por grupo
+//	@Description	Lista todas as Categorias por grupo
+//	@Tags			categorias
+//	@Accept			json
+//	@Produce		json
+//	@Param			grupo						path		string	true	"Grupo do Medicamento (Antibiótico, Antihistamínico, entre outros)"
+//	@Success		200							{array}		model.Categoria
+//	@Failure		400							{object}	config.HTTPError
+//	@Failure		401							{object}	config.HTTPError
+//	@Router			/categorias/grupo/{grupo} 	[get]
+//	@Security		Bearer
 func (categoriaController *CategoriaController) FindByGrupo(context *fiber.Ctx) error {
 
 	grupo := context.Params("grupo")
@@ -92,17 +92,17 @@ func (categoriaController *CategoriaController) FindByGrupo(context *fiber.Ctx) 
 
 }
 
-// @Summary		Criar Categoria
-// @Description	Cria uma nova Categoria
-// @Tags			categorias
-// @Accept			json
-// @Produce		json
-// @Param			categoria	body		model.Categoria	true	"Criar Categoria"
-// @Success		201			{object}	model.Categoria
-// @Failure		400			{object}	config.HTTPError
-// @Failure		401			{object}	config.HTTPError
-// @Router			/categorias [post]
-// @Security		Bearer
+//	@Summary		Criar Categoria
+//	@Description	Cria uma nova Categoria
+//	@Tags			categorias
+//	@Accept			json
+//	@Produce		json
+//	@Param			categoria	body		model.Categoria	true	"Criar Categoria"
+//	@Success		201			{object}	model.Categoria
+//	@Failure		400			{object}	config.HTTPError
+//	@Failure		401			{object}	config.HTTPError
+//	@Router			/categorias [post]
+//	@Security		Bearer
 func (categoriaController *CategoriaController) Create(context *fiber.Ctx) error {
 
 	var categoria model.Categoria
@@ -132,18 +132,18 @@ func (categoriaController *CategoriaController) Create(context *fiber.Ctx) error
 
 }
 
-// @Summary		Atualizar Categoria
-// @Description	Edita uma Categoria
-// @Tags			categorias
-// @Accept			json
-// @Produce		json
-// @Param			Categoria	body		model.Categoria	true	"Atualizar Categoria"
-// @Success		200			{object}	model.Categoria
-// @Failure		400			{object}	config.HTTPError
-// @Failure		401			{object}	config.HTTPError
-// @Failure		404			{object}	config.HTTPError
-// @Router			/categorias [put]
-// @Security		Bearer
+//	@Summary		Atualizar Categoria
+//	@Description	Edita uma Categoria
+//	@Tags			categorias
+//	@Accept			json
+//	@Produce		json
+//	@Param			Categoria	body		model.Categoria	true	"Atualizar Categoria"
+//	@Success		200			{object}	model.Categoria
+//	@Failure		400			{object}	config.HTTPError
+//	@Failure		401			{object}	config.HTTPError
+//	@Failure		404			{object}	config.HTTPError
+//	@Router			/categorias [put]
+//	@Security		Bearer
 func (categoriaController *CategoriaController) Update(context *fiber.Ctx) error {
 
 	var categoria model.Categoria
@@ -184,18 +184,18 @@ func (categoriaController *CategoriaController) Update(context *fiber.Ctx) error
 
 }
 
-// @Summary		Deletar Categoria
-// @Description	Apaga uma Categoria
-// @Tags			categorias
-// @Accept			json
-// @Produce		json
-// @Param			id	path		string	true	"Id da Categoria"
-// @Success		204	{string}	string
-// @Failure		400	{object}	config.HTTPError
-// @Failure		401	{object}	config.HTTPError
-// @Failure		404	{object}	config.HTTPError
-// @Router			/categorias/{id} [delete]
-// @Security		Bearer
+//	@Summary		Deletar Categoria
+//	@Description	Apaga uma Categoria
+//	@Tags			categorias
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"Id da Categoria"
+//	@Success		204	{string}	string
+//	@Failure		400	{object}	config.HTTPError
+//	@Failure		401	{object}	config.HTTPError
+//	@Failure		404	{object}	config.HTTPError
+//	@Router			/categorias/{id} [delete]
+//	@Security		Bearer
 func (categoriaController *CategoriaController) Delete(context *fiber.Ctx) error {
 
 	id := context.Params("id")
